--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   line-height: 1.5;
 
   color-scheme: light dark;
-  background-color: #242424;
+  background-color: #090C11;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,45 +17,24 @@
   height: 100vh;
   width: 100vw ;
 }
-.banner{
-  text-align: center;
-  padding-top: 9vh;
-  font-weight: 600;
-  font-size:12vh ;
-  width: 100vw;
-  height: 30vh;
-  background: linear-gradient(to top, #C50337 , #021C4F);
+#grid1{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  padding-left: 10%;
+  margin-top: 5vh;
 }
-#years{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 5vw;
-  margin-top: 1%;
-
+.grid-items1{
+  display: grid;
+  grid-template-columns: repeat(3, 0.25fr);
+  font-size: 2.4vh;
+  padding: 0.55vh;
 }
-::-webkit-scrollbar-track {
-  margin: 0;   /* removes extra spacing */
-  background: transparent;
+.nav-items{
+  color: white;
+  transition: all 1900ms;
 }
-#months{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 2vw;
-  margin-top: 1%;
-}
-
-.years, .months{
-  background-color:rgba(0, 255, 255, 0.105);
-  padding: 0 1vw;
-  border-radius: 15%;
-  border-style: solid;
-  border-color: white;
-}
-.years:hover,.months:hover{
-  background-color: black;
-  border-style:solid;
+.nav-items:hover{
+  color: #ffd300;
+  animation:ease-in-out 400ms;
+  transform: scale(1.1);
 }
